syntax = "proto3";

package proto;

option go_package = "gnosql/proto";

message NoRequestBody {
}

message DatabaseCreateRequest {
  string databaseName = 1;
  repeated CollectionInput collections = 2;
}

message DatabaseCreateResponse {
  string data = 1;
  string error = 2;
}

message DatabaseResponse {
  string databaseName = 1;
  repeated string collections = 2;
}

message DatabaseConnectResponse {
  DatabaseResponse data = 1;
  string error = 2;
}

message DatabaseDeleteRequest {
  string databaseName = 1;
}

message DatabaseDeleteResponse {
  string data = 1;
  string error = 2;
}

message DatabaseGetAllResponse {
  repeated string data = 1;
  string error = 2;
}

message LoadToDiskResponse {
  string data = 1;
  string error = 2;
}

message CollectionInput {
  string collectionName = 1;
  repeated string indexKeys = 2;
}

message CollectionCreateRequest {
  string databaseName = 1;
  repeated CollectionInput collections = 2;
}

message CollectionCreateResponse {
  string data = 1;
  string error = 2;
}

message CollectionDeleteRequest {
  string databaseName = 1;
  repeated string collections = 2;
}

message CollectionDeleteResponse {
  string data = 1;
  string error = 2;
}

message CollectionGetAllRequest {
  string databaseName = 1;
}

message CollectionGetAllResponse {
  repeated string data = 1;
  string error = 2;
}

message CollectionStatsRequest {
  string databaseName = 1;
  string collectionName = 2;
}

message CollectionStatsResponse {
  CollectionStats data = 1;
  string error = 2;

}

message CollectionStats  {
	string collectionName = 1;
  repeated string indexKeys= 2;
	int32 documents = 3;
}

message DocumentCreateRequest {
  string databaseName = 1;
  string collectionName = 2;
  string document = 3;
}

message DocumentCreateResponse {
  string data = 1;
  string error = 2;
}

message DocumentReadRequest {
  string databaseName = 1;
  string collectionName = 2;
  string docId = 3;
}

message DocumentReadResponse {
  string data = 1;
  string error = 2;
}

message DocumentFilterRequest {
  string databaseName = 1;
  string collectionName = 2;
  string filter = 3;
}

message DocumentFilterResponse {
  string data = 1;
  string error = 2;
}

message DocumentUpdateRequest {
  string databaseName = 1;
  string collectionName = 2;
  string docId = 3;
  string document = 4;
}

message DocumentUpdateResponse {
  string data = 1;
  string error = 2;
}

message DocumentDeleteRequest {
  string databaseName = 1;
  string collectionName = 2;
  string docId = 3;
}

message DocumentDeleteResponse {
  string data = 1;
  string error = 2;
}

message DocumentGetAllRequest {
  string databaseName = 1;
  string collectionName = 2;
}

message DocumentGetAllResponse {
  string data = 1;
  string error = 2;
}

service GnoSQLService {
  rpc CreateNewDatabase(DatabaseCreateRequest) returns (DatabaseCreateResponse);
  rpc ConnectDatabase(DatabaseCreateRequest) returns (DatabaseConnectResponse);
  rpc DeleteDatabase(DatabaseDeleteRequest) returns (DatabaseDeleteResponse);
  rpc GetAllDatabases(NoRequestBody) returns (DatabaseGetAllResponse);
  rpc LoadToDisk(NoRequestBody) returns (LoadToDiskResponse);

  rpc CreateNewCollection(CollectionCreateRequest) returns (CollectionCreateResponse);
  rpc DeleteCollections(CollectionDeleteRequest) returns (CollectionDeleteResponse);
  rpc GetAllCollections(CollectionGetAllRequest) returns (CollectionGetAllResponse);
  rpc GetCollectionStats(CollectionStatsRequest) returns (CollectionStatsResponse);

  rpc CreateDocument(DocumentCreateRequest) returns (DocumentCreateResponse);
  rpc ReadDocument(DocumentReadRequest) returns (DocumentReadResponse);
  rpc FilterDocument(DocumentFilterRequest) returns (DocumentFilterResponse);
  rpc UpdateDocument(DocumentUpdateRequest) returns (DocumentUpdateResponse);
  rpc DeleteDocument(DocumentDeleteRequest) returns (DocumentDeleteResponse);
  rpc GetAllDocuments(DocumentGetAllRequest) returns (DocumentGetAllResponse); 
}
